--- a/sellandbuy/src/templates/membership/membership.ejs
+++ b/sellandbuy/src/templates/membership/membership.ejs
@@ -54,9 +54,7 @@
                   <div class="py-1" role="none">
                     <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
                     <button class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/membership'">Jadi Member</button>
-                    <form method="POST" action="#" role="none">
-                      <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
-                    </form>
+                    <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1" onclick="location.href = '/logout'">Logout</button>
                   </div>
                 </div>
               </div>
@@ -160,7 +158,7 @@
 
       <!-- Header -->
       <section class="w-full sm:w-1/2 max-w-5xl mx-auto p-8">
-        <h1 class="header text-5xl text-center font-bold lg:text-left mt-12 mb-4">Join our Membership</h1>
+        <h1 class="text-5xl text-center font-bold lg:text-left mt-12 mb-4">Join our Membership</h1>
         <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
         <p class="text-2xl text-center mt-12">Ingin bergabung menjadi bagian dari kami? <span class="font-bold">Join membership sekarang</span></p>
       </section>
@@ -176,7 +174,7 @@
               <p class="text-sm text-gray-600 mb-4"> <span class="font-bold"> + 1 bulan </span> gratis untuk pembelian pertama</p>
               <div class="flex flex-col items-center">
                 <div>
-                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-black hover:text-white transition delay-100" onclick="location.href = '/membership/form'">Pilih paket</button>
+                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-black hover:text-white transition delay-100" onclick="location.href = '/membership/bronze'">Pilih paket</button>
                 </div>
                 <div>
                   <a href="#details" class="text-black underline underline-offset-2">Lihat detail benefit selengkapnya</a>
@@ -192,7 +190,7 @@
               <p class="text-sm text-gray-600 mb-4"> <span class="font-bold"> + 1 bulan </span> gratis untuk pembelian pertama</p>
               <div class="flex flex-col items-center">
                 <div>
-                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-black hover:text-white transition delay-100">Pilih paket</button>
+                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-black hover:text-white transition delay-100" onclick="location.href = '/membership/silver'">Pilih paket</button>
                 </div>
                 <div>
                   <a href="#details" class="text-black underline underline-offset-2">Lihat detail benefit selengkapnya</a>
@@ -208,7 +206,7 @@
               <p class="text-sm text-gray-600 mb-4"> <span class="font-bold"> + 1 bulan </span> gratis untuk pembelian pertama</p>
               <div class="flex flex-col items-center">
                 <div>
-                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-black hover:text-white transition delay-100">Pilih paket</button>
+                  <button class="w-56 border-2 border-black font-light py-2 px-4 rounded-full mb-4 hover:bg-black hover:text-white transition delay-100" onclick="location.href = '/membership/gold'">Pilih paket</button>
                 </div>
                 <div>
                   <a href="#details" class="text-black underline underline-offset-2">Lihat detail benefit selengkapnya</a>
