--- a/sellandbuy/src/templates/form-jual/form-awal.ejs
+++ b/sellandbuy/src/templates/form-jual/form-awal.ejs
@@ -33,7 +33,7 @@
               <div>
                 <button
                   type="button"
-                  class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200"
+                  class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition"
                   id="menu-button"
                   aria-expanded="false"
                   aria-haspopup="true"
@@ -54,22 +54,30 @@
                     class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
                     role="menuitem"
                     tabindex="-1"
-                    id="menu-item-0"
+                    id="menu-item-profile"
                     onclick="location.href = '/profile'"
                   >
                     Profile
                   </button>
-                  <form method="POST" action="#" role="none">
-                    <button
-                      type="submit"
-                      class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
-                      role="menuitem"
-                      tabindex="-1"
-                      id="menu-item-1"
-                    >
-                      Logout
-                    </button>
-                  </form>
+                  <button
+                    class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-member"
+                    onclick="location.href = '/membership'"
+                  >
+                    Jadi Member
+                  </button>
+                  <button
+                    type="submit"
+                    class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-logout"
+                    onclick="location.href = '/logout'"
+                  >
+                    Logout
+                  </button>
                 </div>
               </div>
             </div>
@@ -138,7 +146,7 @@
           class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
         >
           <div
-            id="srch-bar"
+            id="srch-bar-mobile"
             class="relative flex sm:hidden w-full px-[10px] rounded-full items-center hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
           >
             <span class="sr-only">Search</span>
@@ -159,7 +167,7 @@
               </svg>
             </span>
             <input
-              id="srch-input"
+              id="srch-input-mobile"
               class="font-saira placeholder:italic placeholder:text-gray-600 bg-white w-full border-2 border-black rounded-xl py-[1px] pr-3 md:pl-7 shadow-sm focus:outline-none focus:border-black focus:ring-black focus:ring-1 text-sm pl-6"
               placeholder="Search..."
               type="text"
@@ -175,101 +183,195 @@
       id="content"
       class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
-    <div class="container mx-auto mt-10 sm:my-0 p-4">
-      <h1 class="text-5xl font-bold mb-2">Isi Detail Produk</h1>
-      <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
-          
-          <!-- Form Section -->
-          <form>
-            <div class="flex flex-col sm:flex-row mt-7">
-              <div class="lg:w-1/2 lg:mr-7">
-                <h2 class="text-3xl font-bold mb-1">Detail Produk</h2>
-                <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
-                <div class="grid grid-cols-2 md:grid-cols-2 gap-6 mt-2">
-                  <div class="col-span-2">
-                    <label class="block text-sm font-medium text-gray-700">Nama produk<span class="text-red-500">*</span></label>
-                    <input type="text" class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm px-1" required>
-                  </div>
-                  <div>
-                    <label class="block text-sm font-medium text-gray-700">Kategori produk<span class="text-red-500">*</span></label>
-                    <input type="text" class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm" required>
-                  </div>
-                  <div>
-                    <label class="block text-sm font-medium text-gray-700">Harga produk<span class="text-red-500">*</span></label>
-                    <input type="text" class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm" required>
-                  </div>
-                  <div class="col-span-2">
-                    <label class="block text-sm font-medium text-gray-700">Alasan menjual produk</label>
-                    <input type="text" class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm">
-                  </div>
-                  <div class="col-span-2">
-                    <label class="block text-sm font-medium text-gray-700">Deskripsi Produk</label>
-                    <textarea class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm" rows="4"></textarea>
-                  </div>
+      <div class="container mx-auto mt-10 sm:my-0 p-4">
+        <h1 class="text-5xl font-bold mb-2">Isi Detail Produk</h1>
+        <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
+
+        <!-- Form Section -->
+        <form action="/jual" method="POST" enctype="multipart/form-data">
+          <div class="flex flex-col sm:flex-row mt-7">
+            <div class="lg:w-1/2 lg:mr-7">
+              <h2 class="text-3xl font-bold mb-1">Detail Produk</h2>
+              <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
+              <div class="grid grid-cols-2 md:grid-cols-2 gap-6 mt-2">
+                <div class="col-span-2">
+                  <label
+                    class="block text-sm font-medium text-gray-700"
+                    for="productName"
+                  >
+                    Nama produk<span class="text-red-500">*</span>
+                  </label>
+                  <input
+                    type="text"
+                    class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm px-1"
+                    id="productName"
+                    name="productName"
+                    required
+                  />
+                </div>
+                <div>
+                  <label
+                    class="block text-sm font-medium text-gray-700"
+                    for="category"
+                  >
+                    Kategori produk<span class="text-red-500">*</span>
+                  </label>
+                  <input
+                    type="text"
+                    class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm"
+                    id="category"
+                    name="category"
+                    required
+                  />
+                </div>
+                <div>
+                  <label
+                    class="block text-sm font-medium text-gray-700"
+                    for="price"
+                  >
+                    Harga produk<span class="text-red-500">*</span>
+                  </label>
+                  <input
+                    type="text"
+                    class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm"
+                    id="price"
+                    name="price"
+                    required
+                  />
+                </div>
+                <div class="col-span-2">
+                  <label
+                    class="block text-sm font-medium text-gray-700"
+                    for="reasonForSelling"
+                  >
+                    Alasan menjual produk<span class="text-red-500">*</span>
+                  </label>
+                  <input
+                    type="text"
+                    class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm"
+                    id="reasonForSelling"
+                    name="reasonForSelling"
+                    required
+                  />
+                </div>
+                <div class="col-span-2">
+                  <label
+                    class="block text-sm font-medium text-gray-700"
+                    for="description"
+                  >
+                    Deskripsi Produk<span class="text-red-500">*</span>
+                  </label>
+                  <textarea
+                    class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm"
+                    rows="4"
+                    id="description"
+                    name="description"
+                    required
+                  ></textarea>
+                </div>
+                <div class="col-span-2">
+                  <label
+                    class="block text-sm font-medium text-gray-700"
+                    for="location"
+                  >
+                    Lokasi Kota<span class="text-red-500">*</span>
+                  </label>
+                  <input
+                    type="text"
+                    class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm"
+                    id="location"
+                    name="location"
+                    required
+                  />
+                </div>
+                <div class="col-span-2">
+                  <label
+                    class="block text-sm font-medium text-gray-700"
+                    for="fullAddress"
+                  >
+                    Alamat Lengkap<span class="text-red-500">*</span>
+                  </label>
+                  <input
+                    type="text"
+                    class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm"
+                    id="fullAddress"
+                    name="fullAddress"
+                    required
+                  />
                 </div>
               </div>
-            
-              
-              <!-- Image Section -->
-                <div class="mt-6 sm:w-1/2">
-                  <!-- Image Container -->
-                  <div class="border-2 border-gray-500 rounded-xl p-7">
-                    <h2 class="text-3xl font-bold mb-1">Tambahkan Gambar / Foto Produk</h2>
-                    <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
-                    <div class="grid grid-cols-4 md:grid-cols-4 gap-4 mt-4">
-                      <label>
-                        <div class="border-2 border-dashed border-gray-300 rounded-lg py-10 px-0 flex items-center justify-center text-gray-400 cursor-pointer">
-                          <span class="text-3xl">+</span>
-                        </div>
-                        <input type="file" class="hidden"/>
-                      </label>
-                      <label>
-                        <div class="border-2 border-dashed border-gray-300 rounded-lg py-10 px-0 flex items-center justify-center text-gray-400 cursor-pointer">
-                          <span class="text-3xl">+</span>
-                        </div>
-                        <input type="file" class="hidden"/>
-                      </label>
-                      <label>
-                        <div class="border-2 border-dashed border-gray-300 rounded-lg py-10 px-0 flex items-center justify-center text-gray-400 cursor-pointer">
-                          <span class="text-3xl">+</span>
-                        </div>
-                        <input type="file" class="hidden"/>
-                      </label>
-                      <label>
-                        <div class="border-2 border-dashed border-gray-300 rounded-lg py-10 px-0 flex items-center justify-center text-gray-400 cursor-pointer">
-                          <span class="text-3xl">+</span>
-                        </div>
-                        <input type="file" class="hidden"/>
-                      </label>
-                    </div>
-                  </div>
+            </div>
 
-                    <!-- Checkbox -->
-                    <div class="mt-6">
-                    <label class="inline-flex items-center">
-                      <input type="checkbox" class="form-checkbox cursor-pointer" required>
-                      <span class="ml-2 text-sm text-gray-700">Dengan menggunakan layanan kami, Anda memercayakan informasi Anda kepada kami. 
-                        Kami paham bahwa melindungi informasi Anda dan memberikan kontrol kepada Anda adalah tanggung jawab yang besar dan memerlukan 
-                        kerja keras.</span>
-                    </label>
-                    <label class="inline-flex items-center mt-4">
-                      <input type="checkbox" class="form-checkbox cursor-pointer" required>
-                      <span class="ml-2 text-sm text-gray-700">Saya dengan ini menyatakan bahwa saya telah membaca dan memahami semua ketentuan dan 
-                        kebijakan yang terkait dengan penggunaan aplikasi/website ini. Saya sepenuhnya setuju dan bersedia mematuhi semua aturan yang telah ditetapkan. 
-                        Saya menyadari bahwa ketidakpatuhan terhadap kebijakan ini dapat mengakibatkan tindakan penghentian akses atau tindakan lain sesuai ketentuan yang 
-                        berlaku.</span>
-                    </label>
-                  </div>
-                </div>
+            <!-- Image Section -->
+            <div class="mt-6 sm:w-1/2">
+              <!-- Image Container -->
+              <div class="border-2 border-gray-500 rounded-xl p-7">
+                <h2 class="text-3xl font-bold mb-1">
+                  Tambahkan Gambar / Foto Produk<span class="text-red-500"
+                    >*</span
+                  >
+                </h2>
+                <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
+                <input
+                  type="file"
+                  id="productImages"
+                  name="productImages"
+                  accept="image/*"
+                  multiple
+                  required
+                  class="w-full p-2 border border-gray-300 rounded mb-5"
+                />
               </div>
 
-            <!-- Button -->
-            <div class="mt-10 mx-auto text-center">
-              <p>Untuk pengiklanan produk akan dikenakan biaya sebesar <span class="font-bold"> RP2.500 / produk </span></p>
+              <!-- Checkbox -->
+              <div class="mt-6">
+                <label class="inline-flex items-center">
+                  <input
+                    type="checkbox"
+                    class="form-checkbox cursor-pointer"
+                    required
+                  />
+                  <span class="ml-2 text-sm text-gray-700"
+                    >Dengan menggunakan layanan kami, Anda memercayakan
+                    informasi Anda kepada kami. Kami paham bahwa melindungi
+                    informasi Anda dan memberikan kontrol kepada Anda adalah
+                    tanggung jawab yang besar dan memerlukan kerja keras.</span
+                  >
+                </label>
+                <label class="inline-flex items-center mt-4">
+                  <input
+                    type="checkbox"
+                    class="form-checkbox cursor-pointer"
+                    required
+                  />
+                  <span class="ml-2 text-sm text-gray-700"
+                    >Saya dengan ini menyatakan bahwa saya telah membaca dan
+                    memahami semua ketentuan dan kebijakan yang terkait dengan
+                    penggunaan aplikasi/website ini. Saya sepenuhnya setuju dan
+                    bersedia mematuhi semua aturan yang telah ditetapkan. Saya
+                    menyadari bahwa ketidakpatuhan terhadap kebijakan ini dapat
+                    mengakibatkan tindakan penghentian akses atau tindakan lain
+                    sesuai ketentuan yang berlaku.</span
+                  >
+                </label>
+              </div>
             </div>
-            <div class="mt-6 lg:w-1/4 mx-auto shadow-md">
-              <button type="submit" class="w-full bg-black text-xl text-white font-bold py-2 rounded-md">Selesaikan Pembayaran</button>
-            </div>
+          </div>
+
+          <!-- Button -->
+          <div class="mt-10 mx-auto text-center">
+            <p>
+              Untuk pengiklanan produk akan dikenakan biaya sebesar
+              <span class="font-bold"> RP2.500 / produk </span>
+            </p>
+          </div>
+          <div class="mt-6 lg:w-1/4 mx-auto shadow-md">
+            <button
+              type="submit"
+              class="w-full bg-black text-xl text-white font-bold py-2 rounded-md"
+            >
+              Selesaikan Pembayaran
+            </button>
           </div>
         </form>
       </div>
