--- a/sellandbuy/src/templates/membership/pembayaran.ejs
+++ b/sellandbuy/src/templates/membership/pembayaran.ejs
@@ -69,17 +69,16 @@
                   >
                     Jadi Member
                   </button>
-                  <form method="POST" action="#" role="none">
-                    <button
-                      type="submit"
-                      class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
-                      role="menuitem"
-                      tabindex="-1"
-                      id="menu-item-1"
-                    >
-                      Logout
-                    </button>
-                  </form>
+                  <button
+                    type="submit"
+                    class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-logout"
+                    onclick="location.href = '/logout'"
+                  >
+                    Logout
+                  </button>
                 </div>
               </div>
             </div>
@@ -211,7 +210,22 @@
                 class="mx-auto w-3/4 md:w-3/4"
               />
               <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
-              <div>
+              <form
+                action="/membership/pembayaran/upload"
+                method="POST"
+                enctype="multipart/form-data"
+              >
+                <div class="mt-4">
+                  <label class="block text-gray-700"
+                    >Upload Bukti Pembayaran</label
+                  >
+                  <input
+                    type="file"
+                    name="paymentProof"
+                    class="w-full px-4 py-2 border rounded-2xl focus:outline-none focus:border-black transition delay-75"
+                    required
+                  />
+                </div>
                 <button
                   class="ml-4 sm:ml-0 bg-black text-white py-2 px-12 mt-4 rounded-xl hover:bg-gray-900"
                   type="submit"
@@ -225,7 +239,7 @@
                   <strong>Kebijakan Privasi</strong> kami. Anda dapat
                   membatalkan biaya perpanjangan layanan kapan saja.
                 </p>
-              </div>
+              </form>
               <p class="text-gray-500 text-xs mt-4">
                 * Biaya untuk 1 bulan pertama. <br />
                 * Pembelian dapat dibatalkan.
