--- a/sellandbuy/src/templates/profile/profil-pengguna-lain.ejs
+++ b/sellandbuy/src/templates/profile/profil-pengguna-lain.ejs
@@ -53,9 +53,7 @@
             >
               <div class="py-1" role="none">
                 <button class="block px-4 py-2 text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
-                <form method="POST" action="#" role="none">
-                  <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
-                </form>
+                <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1" onclick="location.href = '/logout'">Logout</button>
               </div>
             </div>
           </div>
