--- a/sellandbuy/src/templates/form-jual/form-awal.ejs
+++ b/sellandbuy/src/templates/form-jual/form-awal.ejs
@@ -51,7 +51,15 @@
               >
                 <div class="py-1" role="none" id="menu-items">
                   <% if (user) { %>
-                  <!-- Check if user is logged in -->
+                  <button
+                    class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-profile"
+                    onclick="location.href = '/katalog'"
+                  >
+                    Katalog
+                  </button>
                   <button
                     class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
                     role="menuitem"
@@ -119,9 +127,10 @@
               class="relative hidden sm:flex px-[10px] rounded-full items-center lg:w-auto hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <form
-                action="/search"
+                action="/katalog"
                 method="GET"
                 class="w-full flex items-center"
+                id="searchForm"
               >
                 <span class="sr-only">Search</span>
                 <span
@@ -158,35 +167,45 @@
           id="bot-nav"
           class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
         >
-          <div
-            id="srch-bar-mobile"
-            class="relative flex sm:hidden w-full px-[10px] rounded-full items-center hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+          <form
+            action="/katalog"
+            method="GET"
+            class="w-full flex items-center"
+            id="searchForm"
           >
-            <span class="sr-only">Search</span>
-            <span id="srch-icon" class="absolute left-0 flex items-center pl-5">
-              <svg
-                class="h-5 w-5 fill-black"
-                data-slot="icon"
-                fill="currentColor"
-                viewBox="0 0 16 16"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
+            <div
+              id="srch-bar"
+              class="relative flex sm:hidden w-full px-[10px] rounded-full items-center hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+            >
+              <span class="sr-only">Search</span>
+              <span
+                id="srch-icon"
+                class="absolute left-0 flex items-center pl-5"
               >
-                <path
-                  clip-rule="evenodd"
-                  fill-rule="evenodd"
-                  d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
-                ></path>
-              </svg>
-            </span>
-            <input
-              id="srch-input-mobile"
-              class="font-saira placeholder:italic placeholder:text-gray-600 bg-white w-full border-2 border-black rounded-xl py-[1px] pr-3 md:pl-7 shadow-sm focus:outline-none focus:border-black focus:ring-black focus:ring-1 text-sm pl-6"
-              placeholder="Search..."
-              type="text"
-              name="search"
-            />
-          </div>
+                <svg
+                  class="h-5 w-5 fill-black"
+                  data-slot="icon"
+                  fill="currentColor"
+                  viewBox="0 0 16 16"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    clip-rule="evenodd"
+                    fill-rule="evenodd"
+                    d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                  ></path>
+                </svg>
+              </span>
+              <input
+                id="srch-input"
+                class="font-saira placeholder:italic placeholder:text-gray-600 bg-white w-full border-2 border-black rounded-xl py-[1px] pr-3 md:pl-7 shadow-sm focus:outline-none focus:border-black focus:ring-black focus:ring-1 text-sm pl-6"
+                placeholder="Search..."
+                type="text"
+                name="search"
+              />
+            </div>
+          </form>
         </div>
       </header>
     </div>
@@ -240,6 +259,23 @@
                       <%= category.name %>
                     </option>
                     <% }) %>
+                  </select>
+                </div>
+                <div>
+                  <label
+                    class="block text-sm font-medium text-gray-700"
+                    for="condition"
+                  >
+                    Kondisi Produk<span class="text-red-500">*</span>
+                  </label>
+                  <select
+                    class="mt-1 block w-full border border-gray-500 rounded-md shadow-sm"
+                    id="condition"
+                    name="condition"
+                    required
+                  >
+                    <option value="Baru">Baru</option>
+                    <option value="Bekas">Bekas</option>
                   </select>
                 </div>
                 <div>
