--- a/sellandbuy/src/templates/market/detail-item.ejs
+++ b/sellandbuy/src/templates/market/detail-item.ejs
@@ -81,6 +81,15 @@
                     class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
                     role="menuitem"
                     tabindex="-1"
+                    id="menu-item-profile"
+                    onclick="location.href = '/katalog'"
+                  >
+                    Katalog
+                  </button>
+                  <button
+                    class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
                     id="menu-item-0"
                     onclick="location.href = '/profile'"
                   >
@@ -128,6 +137,7 @@
             >
               <img class="w-btn-pfl" src="/images/tambahkan.png" />
             </a>
+            <
             <div
               id="srch-bar"
               class="relative hidden sm:flex px-[10px] rounded-full items-center lg:w-auto hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
@@ -136,6 +146,7 @@
                 action="/katalog"
                 method="GET"
                 class="w-full flex items-center"
+                id="searchForm"
               >
                 <span class="sr-only">Search</span>
                 <span
@@ -170,37 +181,47 @@
         </div>
         <div
           id="bot-nav"
-          class="w-full flex items-center justify-center mx-3 pt-2 pb-4 sm:px-[20px]"
+          class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
         >
-          <div
-            id="srch-bar"
-            class="relative flex sm:hidden w-full px-[10px] rounded-full items-center hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+          <form
+            action="/katalog"
+            method="GET"
+            class="w-full flex items-center"
+            id="searchForm"
           >
-            <span class="sr-only">Search</span>
-            <span id="srch-icon" class="absolute left-0 flex items-center pl-5">
-              <svg
-                class="h-5 w-5 fill-black"
-                data-slot="icon"
-                fill="currentColor"
-                viewBox="0 0 16 16"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
+            <div
+              id="srch-bar"
+              class="relative flex sm:hidden w-full px-[10px] rounded-full items-center hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+            >
+              <span class="sr-only">Search</span>
+              <span
+                id="srch-icon"
+                class="absolute left-0 flex items-center pl-5"
               >
-                <path
-                  clip-rule="evenodd"
-                  fill-rule="evenodd"
-                  d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
-                ></path>
-              </svg>
-            </span>
-            <input
-              id="srch-input"
-              class="font-saira placeholder:italic placeholder:text-gray-600 bg-white w-full border-2 border-black rounded-xl py-[1px] pr-3 md:pl-7 shadow-sm focus:outline-none focus:border-black focus:ring-black focus:ring-1 text-sm pl-6"
-              placeholder="Search..."
-              type="text"
-              name="search"
-            />
-          </div>
+                <svg
+                  class="h-5 w-5 fill-black"
+                  data-slot="icon"
+                  fill="currentColor"
+                  viewBox="0 0 16 16"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    clip-rule="evenodd"
+                    fill-rule="evenodd"
+                    d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                  ></path>
+                </svg>
+              </span>
+              <input
+                id="srch-input"
+                class="font-saira placeholder:italic placeholder:text-gray-600 bg-white w-full border-2 border-black rounded-xl py-[1px] pr-3 md:pl-7 shadow-sm focus:outline-none focus:border-black focus:ring-black focus:ring-1 text-sm pl-6"
+                placeholder="Search..."
+                type="text"
+                name="search"
+              />
+            </div>
+          </form>
         </div>
       </header>
     </div>
@@ -290,15 +311,24 @@
               />
               <p class="text-gray-700">
                 <strong>Kategori:</strong> <%= product.category.name %><br />
-                <strong>Kondisi:</strong> Baru<br />
+                <strong>Kondisi:</strong> <%= product.condition %><br />
               </p>
             </div>
-            <p class="text-gray-700 mb-6 pr-0 xl:pr-72">
-              <%= product.description %>
-              <span class="font-bold" id="dots">...</span>
-              <span class="hidden" id="more">
-                <!-- Additional information could be shown here -->
+            <p class="text-gray-700 mb-6 pr-0 xl:pr-72" id="productDescription">
+              <span id="descriptionText">
+                <%= product.description.length > 100 ?
+                product.description.substring(0, 100) : product.description %>
               </span>
+              <span
+                class="font-bold"
+                id="dots"
+                style="display: <%= product.description.length > 100 ? 'inline' : 'none' %>;"
+                >...</span
+              >
+              <span class="hidden" id="more">
+                <%= product.description.substring(100) %>
+              </span>
+              <% if (product.description.length > 100) { %>
               <button
                 class="font-bold mb-2"
                 onclick="readMoreFunction()"
@@ -306,6 +336,7 @@
               >
                 Lihat Selengkapnya
               </button>
+              <% } %>
             </p>
 
             <div class="flex flex-col lg:w-1/3">
@@ -522,9 +553,9 @@
       });
 
       function readMoreFunction() {
-        var dots = document.getElementById("dots");
-        var moreText = document.getElementById("more");
-        var btnText = document.getElementById("myBtn");
+        const dots = document.getElementById("dots");
+        const moreText = document.getElementById("more");
+        const btnText = document.getElementById("myBtn");
 
         if (dots.style.display === "none") {
           dots.style.display = "inline";
