--- a/sellandbuy/src/templates/profile/item/detail-item.ejs
+++ b/sellandbuy/src/templates/profile/item/detail-item.ejs
@@ -14,12 +14,37 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/detail-item.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/detail-item.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <style>
+      .slider-container {
+        width: 100%;
+        max-width: 100%;
+      }
+
+      .slides {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        transition: transform 0.3s ease-in-out;
+      }
+
+      .slide {
+        width: 100%;
+        height: 100%;
+        flex: none;
+      }
+
+      .slide img {
+        max-width: 100%;
+        height: auto;
+        transition: transform 0.3s ease;
+      }
+    </style>
   </head>
+
   <body class="min-h-screen flex flex-col font-saira">
-    <!-- Navbar -->
     <div id="nav-wrp" class="mb-20">
       <header
         id="navbar"
@@ -51,6 +76,15 @@
                 id="menu"
               >
                 <div class="py-1" role="none">
+                  <button
+                    class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-profile"
+                    onclick="location.href = '/katalog'"
+                  >
+                    Katalog
+                  </button>
                   <button
                     class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
                     role="menuitem"
@@ -107,9 +141,10 @@
               class="relative hidden sm:flex px-[10px] rounded-full items-center lg:w-auto hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <form
-                action="/search"
+                action="/katalog"
                 method="GET"
                 class="w-full flex items-center"
+                id="searchForm"
               >
                 <span class="sr-only">Search</span>
                 <span
@@ -146,35 +181,45 @@
           id="bot-nav"
           class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
         >
-          <div
-            id="srch-bar"
-            class="relative flex sm:hidden w-full px-[10px] rounded-full items-center hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+          <form
+            action="/katalog"
+            method="GET"
+            class="w-full flex items-center"
+            id="searchForm"
           >
-            <span class="sr-only">Search</span>
-            <span id="srch-icon" class="absolute left-0 flex items-center pl-5">
-              <svg
-                class="h-5 w-5 fill-black"
-                data-slot="icon"
-                fill="currentColor"
-                viewBox="0 0 16 16"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
+            <div
+              id="srch-bar"
+              class="relative flex sm:hidden w-full px-[10px] rounded-full items-center hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+            >
+              <span class="sr-only">Search</span>
+              <span
+                id="srch-icon"
+                class="absolute left-0 flex items-center pl-5"
               >
-                <path
-                  clip-rule="evenodd"
-                  fill-rule="evenodd"
-                  d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
-                ></path>
-              </svg>
-            </span>
-            <input
-              id="srch-input"
-              class="font-saira placeholder:italic placeholder:text-gray-600 bg-white w-full border-2 border-black rounded-xl py-[1px] pr-3 md:pl-7 shadow-sm focus:outline-none focus:border-black focus:ring-black focus:ring-1 text-sm pl-6"
-              placeholder="Search..."
-              type="text"
-              name="search"
-            />
-          </div>
+                <svg
+                  class="h-5 w-5 fill-black"
+                  data-slot="icon"
+                  fill="currentColor"
+                  viewBox="0 0 16 16"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    clip-rule="evenodd"
+                    fill-rule="evenodd"
+                    d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                  ></path>
+                </svg>
+              </span>
+              <input
+                id="srch-input"
+                class="font-saira placeholder:italic placeholder:text-gray-600 bg-white w-full border-2 border-black rounded-xl py-[1px] pr-3 md:pl-7 shadow-sm focus:outline-none focus:border-black focus:ring-black focus:ring-1 text-sm pl-6"
+                placeholder="Search..."
+                type="text"
+                name="search"
+              />
+            </div>
+          </form>
         </div>
       </header>
     </div>
@@ -185,76 +230,123 @@
       class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
       <div class="p-6 lg:my-auto">
-        <div class="flex flex-col sm:flex-row">
+        <div
+          class="flex flex-col sm:flex-row lg:divide-x-2 lg:divide-solid lg:divide-black"
+        >
           <!-- Images Section -->
           <div class="w-full lg:w-1/2 mr-5 mb-4 sm:mb-0 md:my-auto">
-            <div
-              class="grid grid-rows-2 lg:grid-rows-3 grid-flow-col gap-4 justify-center items-center"
-            >
-              <img
-                src="images/market-images/shirt2.png"
-                alt="Image 1"
-                class="h-48 w-48 sm:w-auto sm:h-auto"
-              />
-              <img
-                src="images/market-images/shirt3.png"
-                alt="Image 2"
-                class="h-48 w-48 sm:w-auto sm:h-auto"
-              />
-              <img
-                src="images/market-images/shirt2.png"
-                alt="Image 3"
-                class="h-48 w-48 sm:w-auto sm:h-auto"
-              />
-              <div class="lg:row-span-3">
-                <img
-                  src="images/market-images/shirt.png"
-                  alt="Image 4"
-                  class="h-48 w-48 sm:w-auto sm:h-auto"
-                />
+            <div class="relative max-w-2xl mx-auto">
+              <div class="slider-container overflow-hidden relative">
+                <div
+                  class="slides flex transition-transform duration-300 ease-in-out"
+                  style="transform: translateX(0%)"
+                >
+                  <% product.images.forEach((image, index) => { %>
+                  <div class="slide w-full flex-none">
+                    <img
+                      src="/<%= image %>"
+                      alt="Product Image <%= index + 1 %>"
+                      class="object-cover rounded-lg w-full h-[300px] sm:h-[400px] lg:h-[500px]"
+                    />
+                  </div>
+                  <% }) %>
+                </div>
               </div>
+              <button
+                id="prevBtn"
+                class="absolute top-1/2 left-2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-100 transition p-3 rounded-full focus:outline-none"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  class="w-8 h-8 text-gray-800"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M15 19l-7-7 7-7"
+                  />
+                </svg>
+              </button>
+              <button
+                id="nextBtn"
+                class="absolute top-1/2 right-2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-100 transition p-3 rounded-full focus:outline-none"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  class="w-8 h-8 text-gray-800"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9 5l7 7-7 7"
+                  />
+                </svg>
+              </button>
             </div>
           </div>
+
           <!-- Details Section -->
-          <div class="w-full lg:w-1/2 p-4">
+          <div class="w-full lg:w-1/2 p-5">
             <h1 class="text-3xl font-bold mb-4 sm:text-4xl lg:text-5xl">
-              Polo Hitam Laki-Laki
+              <%= product.productName %>
             </h1>
-            <hr
-              class="line h-px w-full xl:w-2/3 bg-black border-0 dark:bg-gray-700"
-            />
-            <p class="text-3xl font-bold mt-2 mb-6">Rp.200.000</p>
+            <hr class="line h-px w-full bg-black border-0 dark:bg-gray-700" />
+            <p class="text-3xl font-bold mt-2 mb-6">
+              Rp.<%= product.price.toLocaleString() %>
+            </p>
             <div class="mb-4">
               <h2 class="text-lg">Deskripsi</h2>
               <hr
                 class="h-px w-2/3 bg-black border-0 dark:bg-gray-700 mt-1 mb-1"
               />
               <p class="text-gray-700">
-                <strong>Kategori:</strong> Pakaian & Aksesoris<br />
-                <strong>Kondisi:</strong> Baru<br />
-                <strong>Ukuran:</strong> S, M, L, XL, XXL<br />
+                <strong>Kategori:</strong> <%= product.category.name %><br />
+                <strong>Kondisi:</strong> <%= product.condition %><br />
               </p>
             </div>
-            <p class="text-gray-700 mb-6 pr-0 xl:pr-72">
-              Bahan 100% katun, penjahitan ganda dibagian bawah dan ujung, welt
-              manset pada kerah, made in indonesia. Lorem ipsum dolor sit amet,
-              consectetur adipiscing elit. Fusce sit amet orci vel purus feugiat
-              convallis sed sed nisl. Donec lectus odio, posuere sed lacus in,
-              molestie convallis magna. Aliquam sollicitudin eros mauris, ac
-              tristique justo volutpat non. Sed vitae tempor ante. Mauris
-              viverra diam sit amet est ornare, eu malesuada arcu tristique.
-              Praesent sed dictum ipsum.
+            <p class="text-gray-700 mb-6 pr-0 xl:pr-72" id="productDescription">
+              <span id="descriptionText">
+                <%= product.description.length > 100 ?
+                product.description.substring(0, 100) : product.description %>
+              </span>
+              <span
+                class="font-bold"
+                id="dots"
+                style="display: <%= product.description.length > 100 ? 'inline' : 'none' %>;"
+                >...</span
+              >
+              <span class="hidden" id="more">
+                <%= product.description.substring(100) %>
+              </span>
+              <% if (product.description.length > 100) { %>
+              <button
+                class="font-bold mb-2"
+                onclick="readMoreFunction()"
+                id="myBtn"
+              >
+                Lihat Selengkapnya
+              </button>
+              <% } %>
             </p>
+
             <div class="button flex flex-col w-full xl:w-2/3">
               <button
                 class="mb-2 border-2 border-black rounded-3xl bg-white text-2xl font-light py-4 hover:bg-gray-100 transition delay-100"
-                onclick="location.href = '/offer'"
+                onclick="location.href = '/profile/product/<%= product.id %>/daftar-penawaran'"
               >
                 Lihat Penawaran
               </button>
               <button
                 class="mb-2 border-2 border-black rounded-3xl bg-black text-2xl font-light text-white py-4 hover:bg-gray-900 transition delay-100"
-                onclick="location.href = '/product/edit'"
+                onclick="location.href = '/profile/product/edit/<%= product.id %>'"
               >
                 Ubah detail barang
               </button>
@@ -298,7 +390,7 @@
               class="w-1/2 sm:w-2/3 flex flex-col sm:flex-row justify-between sm:justify-start"
             >
               <img
-                src="images/footer-logo.png"
+                src="/images/footer-logo.png"
                 class="w-[150px] sm:w-[300px] mr-[5px]"
               />
               <span
@@ -321,16 +413,16 @@
               class="w-1/2 sm:w-1/3 flex flex-row justify-between items-center"
             >
               <a href="#" class="flex items-center"
-                ><img src="images/instagram.png"
+                ><img src="/images/instagram.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/whatsapp.png"
+                ><img src="/images/whatsapp.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/linkedin.png"
+                ><img src="/images/linkedin.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/email.png"
+                ><img src="/images/email.png"
               /></a>
             </div>
           </div>
@@ -360,8 +452,52 @@
           menuButton.setAttribute("aria-expanded", "false");
         }
       });
+
+      function readMoreFunction() {
+        const dots = document.getElementById("dots");
+        const moreText = document.getElementById("more");
+        const btnText = document.getElementById("myBtn");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Lihat Selengkapnya";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Lihat Lebih Sedikit";
+          moreText.style.display = "inline";
+        }
+      }
+
+      // Custom slider JavaScript
+      document.addEventListener("DOMContentLoaded", function () {
+        const slides = document.querySelector(".slides");
+        const slideItems = document.querySelectorAll(".slide");
+        let currentIndex = 0;
+
+        const updateSlidePosition = () => {
+          const slideWidth = slideItems[0].offsetWidth;
+          slides.style.transform = `translateX(-${
+            currentIndex * slideWidth
+          }px)`;
+        };
+
+        document.getElementById("prevBtn").addEventListener("click", () => {
+          currentIndex =
+            currentIndex > 0 ? currentIndex - 1 : slideItems.length - 1;
+          updateSlidePosition();
+        });
+
+        document.getElementById("nextBtn").addEventListener("click", () => {
+          currentIndex =
+            currentIndex < slideItems.length - 1 ? currentIndex + 1 : 0;
+          updateSlidePosition();
+        });
+
+        window.addEventListener("resize", updateSlidePosition);
+      });
     </script>
 
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
