--- a/sellandbuy/src/templates/profile/item/penawaran.ejs
+++ b/sellandbuy/src/templates/profile/item/penawaran.ejs
@@ -1,5 +1,3 @@
-<!-- Buat template awal EJS lainnya -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -57,6 +55,15 @@
                     class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
                     role="menuitem"
                     tabindex="-1"
+                    id="menu-item-profile"
+                    onclick="location.href = '/katalog'"
+                  >
+                    Katalog
+                  </button>
+                  <button
+                    class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
                     id="menu-item-0"
                     onclick="location.href = '/profile'"
                   >
@@ -109,9 +116,10 @@
               class="relative hidden sm:flex px-[10px] rounded-full items-center lg:w-auto hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <form
-                action="/search"
+                action="/katalog"
                 method="GET"
                 class="w-full flex items-center"
+                id="searchForm"
               >
                 <span class="sr-only">Search</span>
                 <span
@@ -163,35 +171,45 @@
           id="bot-nav"
           class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
         >
-          <div
-            id="srch-bar"
-            class="relative flex sm:hidden w-full px-[10px] rounded-full items-center hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+          <form
+            action="/katalog"
+            method="GET"
+            class="w-full flex items-center"
+            id="searchForm"
           >
-            <span class="sr-only">Search</span>
-            <span id="srch-icon" class="absolute left-0 flex items-center pl-5">
-              <svg
-                class="h-5 w-5 fill-black"
-                data-slot="icon"
-                fill="currentColor"
-                viewBox="0 0 16 16"
-                xmlns="http://www.w3.org/2000/svg"
-                aria-hidden="true"
+            <div
+              id="srch-bar"
+              class="relative flex sm:hidden w-full px-[10px] rounded-full items-center hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+            >
+              <span class="sr-only">Search</span>
+              <span
+                id="srch-icon"
+                class="absolute left-0 flex items-center pl-5"
               >
-                <path
-                  clip-rule="evenodd"
-                  fill-rule="evenodd"
-                  d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
-                ></path>
-              </svg>
-            </span>
-            <input
-              id="srch-input"
-              class="font-saira placeholder:italic placeholder:text-gray-600 bg-white w-full border-2 border-black rounded-xl py-[1px] pr-3 md:pl-7 shadow-sm focus:outline-none focus:border-black focus:ring-black focus:ring-1 text-sm pl-6"
-              placeholder="Search..."
-              type="text"
-              name="search"
-            />
-          </div>
+                <svg
+                  class="h-5 w-5 fill-black"
+                  data-slot="icon"
+                  fill="currentColor"
+                  viewBox="0 0 16 16"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    clip-rule="evenodd"
+                    fill-rule="evenodd"
+                    d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                  ></path>
+                </svg>
+              </span>
+              <input
+                id="srch-input"
+                class="font-saira placeholder:italic placeholder:text-gray-600 bg-white w-full border-2 border-black rounded-xl py-[1px] pr-3 md:pl-7 shadow-sm focus:outline-none focus:border-black focus:ring-black focus:ring-1 text-sm pl-6"
+                placeholder="Search..."
+                type="text"
+                name="search"
+              />
+            </div>
+          </form>
         </div>
       </header>
     </div>
@@ -203,130 +221,56 @@
     >
       <div class="container mx-auto p-4">
         <h2 class="mt-8 text-3xl lg:mt-0 lg:text-5xl font-bold mb-4">
-          Daftar Penawaran Barang
+          Daftar Penawaran Barang untuk <%= product.productName %>
         </h2>
         <hr class="h-px w-full bg-black border-0 dark:bg-gray-700 mb-4" />
 
         <!-- Offer List -->
         <div id="offer-list" class="space-y-4">
-          <!-- Offer example -->
-          <div class="bg-white px-4 space-y-4">
+          <% offers.slice(0, 5).forEach((offer) => { %>
+          <div class="bg-white px-4">
             <div class="flex items-center justify-between">
               <div class="flex items-center">
                 <img
                   class="w-12 h-12 rounded-full"
-                  src="/images/pictures/ex-img.png"
-                  alt="Profile Picture"
+                  src="/<%= offer.user.profilePicturePath %>"
+                  alt="<%= offer.user.username %> Profile Picture"
                 />
                 <div class="ml-4">
-                  <div class="text-lg font-semibold">Jack Resti</div>
-                  <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
-                </div>
-              </div>
-              <div>
-                <a href="#" class="text-sm text-black font-semibold"
-                  >hubungi sekarang</a
-                >
-              </div>
-            </div>
-
-            <hr class="h-px w-full bg-gray-300 border-0" />
-
-            <!-- Repeat the above block for each offer -->
-            <div class="flex items-center justify-between">
-              <div class="flex items-center">
-                <img
-                  class="w-12 h-12 rounded-full"
-                  src="/images/pictures/ex-img.png"
-                  alt="Profile Picture"
-                />
-                <div class="ml-4">
-                  <div class="text-lg font-semibold">Jack Resti</div>
-                  <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
-                </div>
-              </div>
-              <div>
-                <a href="#" class="text-sm text-black font-semibold"
-                  >hubungi sekarang</a
-                >
-              </div>
-            </div>
-
-            <hr class="h-px w-full bg-gray-300 border-0" />
-
-            <div class="flex items-center justify-between">
-              <div class="flex items-center">
-                <img
-                  class="w-12 h-12 rounded-full"
-                  src="/images/pictures/ex-img.png"
-                  alt="Profile Picture"
-                />
-                <div class="ml-4">
-                  <div class="text-lg font-semibold">Jack Resti</div>
-                  <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
-                </div>
-              </div>
-              <div>
-                <a href="#" class="text-sm text-black font-semibold"
-                  >hubungi sekarang</a
-                >
-              </div>
-            </div>
-
-            <hr class="h-px w-full bg-gray-300 border-0" />
-
-            <div class="flex items-center justify-between">
-              <div class="flex items-center">
-                <img
-                  class="w-12 h-12 rounded-full"
-                  src="/images/pictures/ex-img.png"
-                  alt="Profile Picture"
-                />
-                <div class="ml-4">
-                  <div class="text-lg font-semibold">Jack Resti</div>
-                  <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
+                  <div class="text-lg font-semibold">
+                    <%= offer.user.username %>
+                  </div>
+                  <div class="text-xs text-gray-600">
+                    Menawar Rp. <%= offer.offerPrice.toLocaleString('id-ID',
+                    {style: 'currency', currency: 'IDR'}) %>
+                  </div>
                 </div>
               </div>
               <div>
                 <a
-                  href="/pengguna-lain"
+                  href="https://wa.me/<%= offer.user.phone %>"
                   class="text-sm text-black font-semibold"
-                  >hubungi sekarang</a
-                >
-              </div>
-            </div>
-
-            <hr class="h-px w-full bg-gray-300 border-0" />
-
-            <div class="flex items-center justify-between">
-              <div class="flex items-center">
-                <img
-                  class="w-12 h-12 rounded-full"
-                  src="/images/pictures/ex-img.png"
-                  alt="Profile Picture"
-                />
-                <div class="ml-4">
-                  <div class="text-lg font-semibold">Jack Resti</div>
-                  <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
-                </div>
-              </div>
-              <div>
-                <a href="#" class="text-sm text-black font-semibold"
-                  >hubungi sekarang</a
+                  target="_blank"
+                  >Hubungi Sekarang</a
                 >
               </div>
             </div>
             <hr class="h-px w-full bg-gray-300 border-0" />
           </div>
-        </div>
-
-        <div class="text-center mt-4">
-          <button
-            onclick="loadMoreFunction()"
-            class="text-gray-500 font-semibold"
-          >
-            Lihat banyak
-          </button>
+          <% }) %> <% if (offers.length === 0) { %>
+          <div class="text-center mt-4">
+            <p class="text-gray-600">Belum ada penawaran untuk produk ini.</p>
+          </div>
+          <% } %> <% if (offers.length > 5) { %>
+          <div class="text-center mt-4">
+            <button
+              onclick="loadMoreFunction()"
+              class="text-gray-500 font-semibold"
+            >
+              Lihat banyak
+            </button>
+          </div>
+          <% } %>
         </div>
       </div>
     </div>
@@ -444,33 +388,37 @@
         }
       }
 
-      // Show more function
+      let currentIndex = 5;
       function loadMoreFunction() {
         const offerList = document.getElementById("offer-list");
 
-        // Example profile to be added
-        const newProfile = `
-      <div class="bg-white px-4">
-          <div class="flex items-center justify-between">
-            <div class="flex items-center">
-              <img class="w-12 h-12 rounded-full" src="/images/pictures/ex-img.png" alt="Profile Picture">
-              <div class="ml-4">
-                <div class="text-lg font-semibold">Jack Resti</div>
-                <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
-              </div>
-            </div>
-            <div>
-              <a href="#" class="text-sm text-black font-semibold">hubungi sekarang</a>
-            </div>
-          </div>
-        </div>
-        <hr class="h-px w-full bg-gray-300 border-0">
-      </div>
-      `;
+        const allOffers = <%- JSON.stringify(offers) %>;
 
-        // Add the new profile multiple times (e.g., 5 times)
-        for (let i = 0; i < 5; i++) {
+        const additionalOffers = allOffers.slice(currentIndex, currentIndex + 5);
+        additionalOffers.forEach((offer) => {
+          const newProfile = `
+            <div class="bg-white px-4">
+              <div class="flex items-center justify-between">
+                <div class="flex items-center">
+                  <img class="w-12 h-12 rounded-full" src="/${offer.user.profilePicturePath}" alt="${offer.user.username} Profile Picture">
+                  <div class="ml-4">
+                    <div class="text-lg font-semibold">${offer.user.username}</div>
+                    <div class="text-xs text-gray-600">Menawar Rp. ${offer.offerPrice.toLocaleString('id-ID', {style: 'currency', currency: 'IDR'})}</div>
+                  </div>
+                </div>
+                <div>
+                  <a href="https://wa.me/${offer.user.phone}" class="text-sm text-black font-semibold" target="_blank">Hubungi Sekarang</a>
+                </div>
+              </div>
+              <hr class="h-px w-full bg-gray-300 border-0">
+            </div>
+          `;
+
           offerList.insertAdjacentHTML("beforeend", newProfile);
+        });
+        currentIndex += 5;
+        if (currentIndex >= allOffers.length) {
+          document.querySelector("button").style.display = "none";
         }
       }
     </script>
