--- a/sellandbuy/src/templates/admin-dashboard/memberships.ejs
+++ b/sellandbuy/src/templates/admin-dashboard/memberships.ejs
@@ -173,7 +173,7 @@
                     <option value="silver">Silver</option>
                     <option value="gold">Gold</option>
                   </select>
-                  <select
+                  <!-- <select
                     name="duration"
                     class="border px-2 py-1 rounded mr-2"
                     required
@@ -181,7 +181,7 @@
                     <option value="" disabled selected>Choose Duration</option>
                     <option value="1 month">1 Month</option>
                     <option value="permanent">Permanent</option>
-                  </select>
+                  </select> -->
                   <button
                     type="submit"
                     class="bg-blue-500 text-white px-4 py-2 rounded"
